Closed Bug 980108 Opened 11 years ago Closed 11 years ago

GLContext.h should not have GLAPIENTRY decls.

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

Attachments

(1 file)

These should only be in GLContextSymbols.h and the windowing lib files, where we have function-pointers.
Attached patch no-glapiSplinter Review
Attachment #8386451 - Flags: review?(dglastonbury)
Comment on attachment 8386451 [details] [diff] [review] no-glapi Review of attachment 8386451 [details] [diff] [review]: ----------------------------------------------------------------- gtg
Attachment #8386451 - Flags: review?(dglastonbury) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: