Bug 980108 - GLContext.h should not use GLAPIENTRY decls. - r=kamidphish